@@ -1,11 +1,6 @@
-/* Gallery SVN ID:
- * $Id$
-*/
-
-
 Hello,
 
-This a description what you have to do to integrate Gallery 1.5.2+ into joomla 1.0.2-1.0.11
+This a description what you have to do to integrate Gallery 1.5.2+ into joomla 1.0.2 - 1.0.12
 
 - Install Joomla
 
@@ -24,3 +19,6 @@ This a description what you have to do to integrate Gallery 1.5.2+ into joomla 1
   Mambo should do all the work of generating the link for you.
 
 Note: Gallery will use the Language corresponding to the Country Locale specified by Joomla.
+
+
+// Gallery SVN ID $Id$
