@@ -1,10 +1,6 @@
-/* Gallery SVN ID:
- * $Id$
-*/
-
 Hello,
 
-This a description what you have to do to integrate Gallery 1.4.3+ into Mambo 4.5+
+This a description what you have to do to integrate Gallery 1.5.2+ into Mambo 4.5+
 
 - Install Mambo
 
@@ -23,3 +19,7 @@ This a description what you have to do to integrate Gallery 1.4.3+ into Mambo 4.
   Mambo should do all the work of generating the link for you.
 
 Note: Gallery will use the Language corresponding to the Country Locale specified by Mambo.
+
+
+
+// Gallery SVN ID $Id$
