@@ -23,18 +23,19 @@
  |
  | $Id$
 -->
-<mosinstall type="component" version="4.5">
+<mosinstall type="component" version="4.7">
 	<name>Gallery</name>
-	<creationDate>December, 31st 2005</creationDate>
+	<creationDate>May, 23th 2007</creationDate>
 	<author>Gallery Development Team</author>
 	<copyright>This component is released under the Gallery license (GNU General Public License)</copyright>
 	<authorEmail>gallery-devel@lists.sourceforge.net</authorEmail>
 	<authorUrl>gallery.sourceforge.net</authorUrl>
-	<version>1.5.2</version>
+	<version>1.6</version>
 	<description>Gallery Component For MOS 4.5 or newer</description>
 	<files>
 		<filename>gallery.php</filename>
 	</files>
+
 	<install>
 		<queries>
 			<query id="1">CREATE TABLE IF NOT EXISTS `#__gallery`
@@ -48,6 +49,9 @@
 			           VALUES ('minAuthType',   '20')
 			</query>
 			<query id="4">INSERT INTO `#__gallery` (`field`, `value`)
+			           VALUES ('minAuthAlbums',   '20')
+			</query>
+			<query id="5">INSERT INTO `#__gallery` (`field`, `value`)
 			           VALUES ('hideRightSide', '1')
 			</query>
 		</queries>
