@@ -1,4 +1,12 @@
-2007-05-03 Chris Kelly <ckdake@ckdake.com> 1.5.7-svn-b1
+2007-05-23 Jens Tkotz <jens@peino.de> 1.5.7-svn-b2
+
+ * New: In Joomla! and Mambo you can now enter which userlevel
+        is allowed to create rootalbums.
+        Uninstall/install of component required.
+
+ * New: Method canCreateRootAlbum() for joomla/mambo user
+
+2007-05-03 Jens Tkotz <jens@peino.de> 1.5.7-svn-b1
 
  * Fix: Little Typo
 
